--- a/admin/src/app/pages/dashboard/dashboard.component.html
+++ b/admin/src/app/pages/dashboard/dashboard.component.html
@@ -6,7 +6,7 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-xxxl-7 col-md-12">
+  <div class="col">
     <ngx-ecommerce-charts></ngx-ecommerce-charts>
   </div>
 </div>
