--- a/admin/src/app/pages/products/product-detail/product-detail.component.html
+++ b/admin/src/app/pages/products/product-detail/product-detail.component.html
@@ -2,10 +2,13 @@
     <nb-card-body>
         <nb-tabset fullWidth (changeTab)="changeTab($event)">
             <nb-tab tabTitle="Basic Information" tabIcon="list-outline">
-                <ngx-product-detail-basic *ngIf="product" [product]="product"></ngx-product-detail-basic>
+                <ngx-product-detail-basic *ngIf="loaded" [product]="product"></ngx-product-detail-basic>
+                <nb-card *ngIf="!loaded" [size]="'large'" [nbSpinner]="true" 
+                    nbSpinnerSize="large" nbSpinnerStatus="primary" >
+                </nb-card>
             </nb-tab>
             <nb-tab tabTitle="Care Guide" tabIcon="calendar-outline">
-                <ngx-product-detail-care-guide *ngIf="product" [careGuide]="product.productCareGuide" ></ngx-product-detail-care-guide>
+                <ngx-product-detail-care-guide *ngIf="loaded" [careGuide]="product.productCareGuide" ></ngx-product-detail-care-guide>
             </nb-tab>
             <nb-tab tabTitle="Comments" tabIcon="message-square-outline"
                 [badgeText]="numberOfComments" badgeStatus="success">
