--- a/admin/src/app/pages/products/shared/form-variants/form-variants.component.html
+++ b/admin/src/app/pages/products/shared/form-variants/form-variants.component.html
@@ -142,7 +142,7 @@
                 <div class="custom-file">
                     <input type="file" class="custom-file-input" accept="image/png, image/jpeg"
                         (change)="selectFileSizeGuide($event)">
-                    <label class="custom-file-label">Choose image</label>
+                    <label class="custom-file-label">Choose Size Guide Image</label>
                 </div>
             </div>
             <div class="row d-flex justify-content-center align-item-center">
