--- a/demo28/src/app/@theme/components/headers/shared/main-menu/main-menu.component.html
+++ b/demo28/src/app/@theme/components/headers/shared/main-menu/main-menu.component.html
@@ -13,7 +13,7 @@
       <a routerLink="/pages/contact">Contact</a>
     </li>
     <li>
-      <a href="https://manage.plantnest.online" target="_blank">Go Admin</a>
+      <a href="https://manage.plantnest.online/admin/auth/login" target="_blank">Go Admin</a>
     </li>
   </ul>
 </nav>
