--- a/demo28/src/app/pages/home/index/index.component.html
+++ b/demo28/src/app/pages/home/index/index.component.html
@@ -13,7 +13,7 @@
               </h3>
               <h3 class="intro-desc mb-2 font-weight-light text-secondary" contentAnim aniName="fadeInUpShorter">Sale
                 30% off</h3>
-              <a routerLink="/shop/sidebar/list" class="btn btn-primary text-uppercase" contentAnim
+              <a routerLink="/shop/list" class="btn btn-primary text-uppercase" contentAnim
                 aniName="fadeInUpShorter">Shop now</a>
             </div>
           </div>
@@ -27,7 +27,7 @@
                 You<br>And The Planet</h3>
               <h3 class="intro-desc mb-2 font-weight-light text-secondary" contentAnim aniName="fadeInUpShorter">Fast
                 Shipping</h3>
-              <a routerLink="/shop/sidebar/list" class="btn btn-primary text-uppercase" contentAnim
+              <a routerLink="/shop/list" class="btn btn-primary text-uppercase" contentAnim
                 aniName="fadeInUpShorter">Shop now</a>
             </div>
           </div>
@@ -38,38 +38,38 @@
       <div class="container">
         <owl-carousel carouselClasses="owl-simple rows cols-1 cols-sm-2 cols-lg-3" [options]="bannerSlider">
           <div class="banner mb-0">
-            <a routerLink="/shop/sidebar/list">
+            <a routerLink="/shop/list">
               <molla-image src="assets/images/home/banners/banner-1.jpg" width="460" height="210" fixedPt="21rem"
                 style="background-color: #e2f1f8;"></molla-image>
             </a>
             <div class="banner-content p-3">
               <h5 class="banner-subtitle font-weight-normal text-light mb-1">Greenery Haven</h5>
               <h3 class="banner-title font-weight-bold">Verdant paradise <br>oasis.</h3>
-              <a routerLink="/shop/sidebar/list" class="banner-link text-decoration-none">Shop Now<i
+              <a routerLink="/shop/list" class="banner-link text-decoration-none">Shop Now<i
                   class="icon-angle-right"></i></a>
             </div>
           </div>
           <div class="banner mb-0">
-            <a routerLink="/shop/sidebar/list">
+            <a routerLink="/shop/list">
               <molla-image src="assets/images/home/banners/banner-2.jpg" width="460" height="210" fixedPt="21rem"
                 style="background-color: #c9e9e4;"></molla-image>
             </a>
             <div class="banner-content p-3">
               <h5 class="banner-subtitle font-weight-normal text-light mb-1">Botanic Treasures</h5>
               <h3 class="banner-title font-weight-bold">Discover rare and exquisite<br> botanical wonders.</h3>
-              <a routerLink="/shop/sidebar/list" class="banner-link text-decoration-none">Shop Now<i
+              <a routerLink="/shop/list" class="banner-link text-decoration-none">Shop Now<i
                   class="icon-angle-right"></i></a>
             </div>
           </div>
           <div class="banner mb-0">
-            <a routerLink="/shop/sidebar/list">
+            <a routerLink="/shop/list">
               <molla-image src="assets/images/home/banners/banner-3.jpg" width="460" height="210" fixedPt="21rem"
                 style="background-color: #e7e6e2;"></molla-image>
             </a>
             <div class="banner-content p-3">
               <h5 class="banner-subtitle font-weight-normal text-light mb-1">Leafy Delights</h5>
               <h3 class="banner-title font-weight-bold">Nature's soothing <br>embrace.</h3>
-              <a routerLink="/shop/sidebar/list" class="banner-link text-decoration-none">Shop Now<i
+              <a routerLink="/shop/list" class="banner-link text-decoration-none">Shop Now<i
                   class="icon-angle-right"></i></a>
             </div>
           </div>
@@ -146,90 +146,90 @@
         <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl-8col">
           <div class="cat bg-white pt-1 mb-2">
             <div class="cat-image" style="border-radius: 50%; overflow: hidden">
-              <a routerLink="/shop/sidebar/list" [queryParams]="{catalog: 'flowering'}">
+              <a routerLink="/shop/list" [queryParams]="{catalog: 'flowering'}">
                 <molla-image src="assets/images/home/categories/1.jpg" width="137" height="137" fixedPt="137px"></molla-image>
               </a>
             </div>
             <div class="cat-content text-center">
-              <a routerLink="/shop/sidebar/list" [queryParams]="{catalog: 'flowering'}" class="cat-title">Flowering</a>
+              <a routerLink="/shop/list" [queryParams]="{catalog: 'flowering'}" class="cat-title">Flowering</a>
             </div>
           </div>
         </div>
         <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl-8col">
           <div class="cat bg-white pt-1 mb-2">
             <div class="cat-image" style="border-radius: 50%; overflow: hidden">
-              <a routerLink="/shop/sidebar/list" [queryParams]="{catalog: 'non-flowering'}"><molla-image
+              <a routerLink="/shop/list" [queryParams]="{catalog: 'non-flowering'}"><molla-image
                   src="assets/images/home/categories/2.jpg" width="137" height="137" fixedPt="137px"></molla-image></a>
             </div>
             <div class="cat-content text-center">
-              <a routerLink="/shop/sidebar/list" [queryParams]="{catalog: 'non-flowering'}" class="cat-title">Non-flowering</a>
+              <a routerLink="/shop/list" [queryParams]="{catalog: 'non-flowering'}" class="cat-title">Non-flowering</a>
             </div>
           </div>
         </div>
         <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl-8col">
           <div class="cat bg-white pt-1 mb-2">
             <div class="cat-image" style="border-radius: 50%; overflow: hidden">
-              <a routerLink="/shop/sidebar/list" [queryParams]="{catalog: 'indoor'}">
+              <a routerLink="/shop/list" [queryParams]="{catalog: 'indoor'}">
                 <molla-image src="assets/images/home/categories/3.jpg" width="137" height="137" fixedPt="137px"></molla-image>
               </a>
             </div>
             <div class="cat-content text-center">
-              <a routerLink="/shop/sidebar/list" [queryParams]="{catalog: 'indoor'}" class="cat-title">Indoor</a>
+              <a routerLink="/shop/list" [queryParams]="{catalog: 'indoor'}" class="cat-title">Indoor</a>
             </div>
           </div>
         </div>
         <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl-8col">
           <div class="cat bg-white pt-1 mb-2">
             <div class="cat-image" style="border-radius: 50%; overflow: hidden">
-              <a routerLink="/shop/sidebar/list" [queryParams]="{catalog: 'outdoor'}"><molla-image
+              <a routerLink="/shop/list" [queryParams]="{catalog: 'outdoor'}"><molla-image
                   src="assets/images/home/categories/4.jpg" width="137" height="137" fixedPt="137px"></molla-image></a>
             </div>
             <div class="cat-content text-center">
-              <a routerLink="/shop/sidebar/list" [queryParams]="{catalog: 'outdoor'}" class="cat-title">Outdoor</a>
+              <a routerLink="/shop/list" [queryParams]="{catalog: 'outdoor'}" class="cat-title">Outdoor</a>
             </div>
           </div>
         </div>
         <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl-8col">
           <div class="cat bg-white pt-1 mb-2">
             <div class="cat-image" style="border-radius: 50%; overflow: hidden">
-              <a routerLink="/shop/sidebar/list" [queryParams]="{catalog: 'succulent'}"><molla-image
+              <a routerLink="/shop/list" [queryParams]="{catalog: 'succulent'}"><molla-image
                   src="assets/images/home/categories/5.jpg" width="137" height="137" fixedPt="137px"></molla-image></a>
             </div>
             <div class="cat-content text-center">
-              <a routerLink="/shop/sidebar/list" [queryParams]="{catalog: 'succulent'}" class="cat-title">Succulent</a>
+              <a routerLink="/shop/list" [queryParams]="{catalog: 'succulent'}" class="cat-title">Succulent</a>
             </div>
           </div>
         </div>
         <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl-8col">
           <div class="cat bg-white pt-1 mb-2">
             <div class="cat-image" style="border-radius: 50%; overflow: hidden">
-              <a routerLink="/shop/sidebar/list" [queryParams]="{catalog: 'soil'}"><molla-image
+              <a routerLink="/shop/list" [queryParams]="{catalog: 'soil'}"><molla-image
                   src="assets/images/home/categories/6.jpg" width="137" height="137" fixedPt="137px"></molla-image></a>
             </div>
             <div class="cat-content text-center">
-              <a routerLink="/shop/sidebar/list" [queryParams]="{catalog: 'soil'}" class="cat-title">Soil</a>
+              <a routerLink="/shop/list" [queryParams]="{catalog: 'soil'}" class="cat-title">Soil</a>
             </div>
           </div>
         </div>
         <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl-8col">
           <div class="cat bg-white pt-1 mb-2">
             <div class="cat-image" style="border-radius: 50%; overflow: hidden">
-              <a routerLink="/shop/sidebar/list" [queryParams]="{catalog: 'fertilizers'}"><molla-image
+              <a routerLink="/shop/list" [queryParams]="{catalog: 'fertilizers'}"><molla-image
                   src="assets/images/home/categories/7.jpg" width="137" height="137" fixedPt="137px"></molla-image></a>
             </div>
             <div class="cat-content text-center">
-              <a routerLink="/shop/sidebar/list" [queryParams]="{catalog: 'fertilizers'}" class="cat-title">Fertilizers</a>
+              <a routerLink="/shop/list" [queryParams]="{catalog: 'fertilizers'}" class="cat-title">Fertilizers</a>
             </div>
           </div>
         </div>
         <div class="col-6 col-sm-4 col-md-3 col-lg-2 col-xl-8col">
           <div class="cat bg-white pt-1 mb-2">
             <div class="cat-image" style="border-radius: 50%; overflow: hidden">
-              <a routerLink="/shop/sidebar/list" [queryParams]="{catalog: 'pesticides'}"><molla-image
+              <a routerLink="/shop/list" [queryParams]="{catalog: 'pesticides'}"><molla-image
                   src="assets/images/home/categories/8.jpg" width="137" height="137" fixedPt="137px"></molla-image></a>
             </div>
             <div class="cat-content text-center">
-              <a routerLink="/shop/sidebar/list" [queryParams]="{catalog: 'pesticides'}" class="cat-title">Pesticides</a>
+              <a routerLink="/shop/list" [queryParams]="{catalog: 'pesticides'}" class="cat-title">Pesticides</a>
             </div>
           </div>
         </div>
@@ -254,7 +254,7 @@
                 Nature's rarest beauty
                 <br> delivered to you.
               </h3>
-              <a routerLink="/shop/sidebar/list" class="banner-link text-decoration-none">Shop Now<i
+              <a routerLink="/shop/list" class="banner-link text-decoration-none">Shop Now<i
                   class="icon-angle-right"></i></a>
             </div>
           </div>
@@ -268,7 +268,7 @@
                 Elevate with top-tier
                 <br>lush greenery options.
               </h3>
-              <a routerLink="/shop/sidebar/list" class="banner-link text-decoration-none">Shop Now<i
+              <a routerLink="/shop/list" class="banner-link text-decoration-none">Shop Now<i
                   class="icon-angle-right"></i></a>
             </div>
           </div>
